# inverted-index

./: .gitignore  LICENSE  README.md  setup.cfg
.github/workflows/: python.yml
inverted_index/: __init__.py  indexing.py
tests/: test_indexing.py  textparser.py
