[metadata]
name = inverted-index
version = 0.0.2
author = Louis Lefevre
author_email = louislefev@gmail.com
description = Inverted index data structure for information retrieval systems.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = inverted index, information retrieval, data structure
license = MIT
license_file = LICENSE
platforms = any
url = https://github.com/louislefevre/inverted-index
download_url = https://github.com/louislefevre/inverted-index/archive/0.0.1.tar.gz
project_urls =
    Bug Tracker = https://github.com/louislefevre/inverted-index/issues
    Pull Requests = https://github.com/louislefevre/inverted-index/pulls
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Software Development
    Topic :: Text Processing
    Topic :: Text Processing :: Indexing

[options]
package_dir =
    = inverted_index
packages = find:
python_requires = >=3.6

[options.packages.find]
where = inverted_index
exclude =
    tests

[options.extras_require]
test =
    pytest
    nltk
    num2words
